networkpolicy-grant.yaml
############################################
# Network policies
############################################
# Default deny policy for httpbin-ns namespace, only allow DNS lookups
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-httpbin-ns
  namespace: httpbin-ns
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53  
---
# Default deny policy for sleep-ns namespace, only allow DNS lookups
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-sleep-ns
  namespace: sleep-ns
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
---
# Grant ingress communication to httpbin from sleep
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-from-sleep
  namespace: httpbin-ns
spec:
  podSelector:
    matchLabels:
      app: httpbin
  policyTypes:
  - Ingress      
  ingress:
  - from:
      - namespaceSelector:
          matchLabels:
            name: sleep-ns
        podSelector:
          matchLabels:
            app: sleep
---
# Grant egress communication from sleep to httpbin
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-to-httpbin
  namespace: sleep-ns
spec:
  podSelector:
    matchLabels:
      app: sleep
  policyTypes:
  - Egress
  egress:
  - to:
      - namespaceSelector:
          matchLabels:
            name: httpbin-ns
        podSelector:
          matchLabels:
            app: httpbin
